First milestone: application launches and shows the latest feed in a list
* Added adapter
* Designed item layout with custom shadowed background
* Designed custom list background

--- a/WeBeyn/res/values/strings.xml
+++ b/WeBeyn/res/values/strings.xml
@@ -3,5 +3,9 @@
 
     <string name="app_name">WeBeyn</string>
     <string name="action_settings">Settings</string>
+    
+    <string name="item_creator">Yazar: %1$s</string>
+    <string name="item_numberOfComments">%1$d Yorum</string>
+    <string name="item_separator">" | "</string>
 
 </resources>
