* Some changes are made in Item model so that now it contains the image as a Bitmap, the link of the image and the summary text without the HTML. * Image handling is improved. Now images are accessed directly from memory once they are loaded from Item model. If that is not possible (it is not set), they get loaded from the cache in external memory. If that is not possible as well, they get downloaded and saved to cache for future access. Newly added caching mechanism handles this. It also allows images to be in cache only if they are not older than a day. * Item layout is changed to RelativeLayout to improve performance. * Added a check for network connection. If there is no connection, the application does nothing but shows a message. * Added WRITE_EXTERNAL_STORAGE permission to be able to do the caching and ACCESS_NETWORK_STATE permission to be able to check if there is a network connection.

--- a/WeBeyn/res/values/strings.xml
+++ b/WeBeyn/res/values/strings.xml
@@ -7,5 +7,7 @@
     <string name="item_creator">Yazar: %1$s</string>
     <string name="item_numberOfComments">%1$d Yorum</string>
     <string name="item_separator">" | "</string>
+    
+    <string name="network_error">İnternet bağlantısı yok!</string>
 
 </resources>
