--- a/WeBeyn/res/values/strings.xml
+++ b/WeBeyn/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="network_error">İnternet bağlantısı yok!</string>
     
     <string name="menu_refresh">Yenile</string>
+    <string name="menu_copyLink">Bağlantıyı Kopyala</string>
     <string name="menu_rate">Oy Verin / Yorum Yapın</string>
     <string name="menu_contact">Geliştiriciye Ulaşın</string>
     <string name="menu_about">Uygulama Hakkında</string>
@@ -23,5 +24,7 @@
     
     <string name="refresh_started">Yenileniyor&#8230;</string>
     <string name="refresh_finished">Yenilendi!</string>
+    
+    <string name="linkCopied">Bağlantı panoya kopyalandı!</string>
 
 </resources>
